# sieve

./: .gitignore  .mcp.example.json  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.sieve/: config.yaml
docs/: architecture.md
extension/: README.md  background.js  content.css  content.js  manifest.json  options.html  options.js  popup.html  popup.js
relay/: DEPLOYMENT.md  pyproject.toml
relay/relay/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py  db.py  models.py  routes.py
relay/tests/: conftest.py  test_auth.py  test_db.py  test_routes.py
scripts/: setup_venv.py
src/sieve/: __init__.py  cli.py  config.py  coordinator.py  logging_config.py  process.py  relay_client.py  utils.py
src/sieve/capsule/: __init__.py  loader.py  schema.py  writer.py
src/sieve/dashboard/: __init__.py  app.py  routes.py
src/sieve/dashboard/static/css/: fonts.css
src/sieve/dashboard/templates/: index.html
src/sieve/dashboard/templates/partials/: capsule_card.html  capsule_detail.html  capsule_list.html  pin_button.html
src/sieve/engine/: __init__.py  indexer.py  processor.py  watcher.py
src/sieve/engine/extractors/: __init__.py  base.py  html.py  image.py  text.py
src/sieve/llm/: __init__.py  openai.py  prompts.py
src/sieve/mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_capsule_loader.py  test_capsule_schema.py  test_capsule_writer.py  test_config.py  test_extractors.py  test_indexer.py  test_llm_openai.py  test_mcp_search.py  test_process.py  test_processor.py  test_relay_client.py  test_utils.py
